k8s/03-tg-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tg-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tg-bot
  template:
    metadata:
      labels:
        app: tg-bot
    spec:
      containers:
        - name: tg-bot
          image: dimaubuntu/newsbot-tg-bot:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8016
          resources:
            requests:
              cpu: "100m"    # 0.1 CPU, HPA uses this for math
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
