k8s/07-zookeeper-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.4.0
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-kafka
  template:
    metadata:
      labels:
        app: news-kafka
    spec:
      containers:
        - name: news-kafka
          image: confluentinc/cp-kafka:7.4.0
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: news-kafka
spec:
  selector:
    app: news-kafka
  ports:
    - port: 9092
      targetPort: 9092
