k8s/09-ngrok.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngrok
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngrok
  template:
    metadata:
      labels:
        app: ngrok
    spec:
      containers:
        - name: ngrok
          image: ngrok/ngrok:latest
          command: ["/bin/sh", "-c"]
          args:
            - |
              DOMAIN=$(echo $VITE_API_BASE_URL | sed 's|https://||')
              ngrok http ingress-nginx-controller.ingress-nginx.svc.cluster.local:80 --domain=$DOMAIN --log=stdout
          ports:
            - containerPort: 4040
---
apiVersion: v1
kind: Service
metadata:
  name: ngrok-admin
spec:
  type: NodePort
  selector:
    app: ngrok
  ports:
    - port: 4040
      targetPort: 4040
      nodePort: 30040
